@@ -1,3 +1,9 @@
+2006-04-22 svu
+
+	* libxklavier/*.c:
+	* tests/*.c: fixing gcc 2.95 compilation,
+	thanks to Jens Granseuer
+
 2006-04-18 svu
 
 	* NEWS: preparing 2.91
